--- a/sass/_transparent_widgets.scss
+++ b/sass/_transparent_widgets.scss
@@ -6,75 +6,117 @@
     background-image: _solid($dark_sidebar_border);
 
     @if $variant=='light' {
-      &:dir(ltr) { margin-left: -1px; }
-      &:dir(rtl) { margin-right: -1px; }
+      &:dir(ltr) {
+        margin-left: -1px;
+      }
+      &:dir(rtl) {
+        margin-right: -1px;
+      }
     }
   }
 }
 
-filechooser paned > separator { background-image: _solid($dark_sidebar_border); }
+filechooser paned > separator {
+  background-image: _solid($dark_sidebar_border);
+}
 
 // Dark transparent sidebars
 filechooser,
 .nautilus-window {
 
-  &.csd.background, placessidebar list { background-color: transparent; }
+  &.csd.background, placessidebar list {
+    background-color: transparent;
+  }
 
   placessidebar.sidebar {
 
-    background-color: $dark_sidebar_bg;
+    background-color: transparent;
+    &:dir(ltr) {
+      background-image: linear-gradient(to right, darken($dark_sidebar_bg, 10%) 41px, $dark_sidebar_bg 0);
+    }
+    &:dir(rtl) {
+      background-image: linear-gradient(to left, darken($dark_sidebar_bg, 10%) 41px, $dark_sidebar_bg 0);
+    }
 
     row.sidebar-row {
       border: none;
       color: $dark_sidebar_fg;
 
-      .sidebar-icon { color: transparentize($dark_sidebar_fg, 0.4); }
+      .sidebar-icon {
+        color: white;
+      }
 
       &.has-open-popup,
-      &:hover { background-color: transparentize($dark_sidebar_fg, 0.85); }
+      &:hover {
+        background-color: transparentize($dark_sidebar_fg, 0.85);
+      }
 
       &:disabled {
-        &, label, image { color: transparentize($dark_sidebar_fg, 0.6); }
+        &, label, image {
+          color: transparentize($dark_sidebar_fg, 0.6);
+        }
       }
 
       &:selected.has-open-popup,
       &:selected, &:selected:hover, &:active:hover {
         @extend %selected_items;
 
-        .sidebar-icon { color: inherit; }
+        background-image: linear-gradient(to right, darken($selected_bg_color, 10%) 41px, transparent 0);
+
+        .sidebar-icon {
+          color: inherit;
+        }
       }
 
       &:not(:selected) button.sidebar-button {
         color: $dark_sidebar_fg;
 
-        &:hover { @include button(osd-hover); }
-        &:active { @include button(active); }
+        &:hover {
+          @include button(osd-hover);
+        }
+        &:active {
+          @include button(active);
+        }
 
-        &:not(:hover):not(:active) > image { opacity: 0.5 };
+        &:not(:hover):not(:active) > image {
+          opacity: 0.5
+        }
       }
 
       &.sidebar-new-bookmark-row {
         color: $selected_bg_color;
 
-        .sidebar-icon { color: inherit; }
+        .sidebar-icon {
+          color: inherit;
+        }
       }
 
       &:drop(active):not(:disabled) {
-        &, label, .sidebar-icon { color: $drop_target_color; }
+        &, label, .sidebar-icon {
+          color: $drop_target_color;
+        }
 
         &:selected {
-          &, label, .sidebar-icon { color: $selected_fg_color; }
+          &, label, .sidebar-icon {
+            color: $selected_fg_color;
+          }
           background-color: $drop_target_color;
         }
       }
     }
 
-    separator { background-color: transparent; }
+    separator {
+      background-color: transparent;
+    }
 
-    scrollbar { @extend %dark_sidebar_scrollbar }
+    scrollbar {
+      @extend %dark_sidebar_scrollbar
+    }
   }
 
-  &.maximized placessidebar.sidebar { background-color: opacify($dark_sidebar_bg, 1); }
+  &.maximized placessidebar.sidebar {
+    background-color: opacify($dark_sidebar_bg, 1);
+  }
 }
 
 .nemo-window {
@@ -94,13 +136,19 @@ filechooser,
       &.expander {
         color: mix($dark_sidebar_fg, $dark_sidebar_bg, 50%);
 
-        &:hover { color: $dark_sidebar_fg; }
+        &:hover {
+          color: $dark_sidebar_fg;
+        }
       }
     }
 
-    separator { background-color: transparent; }
+    separator {
+      background-color: transparent;
+    }
 
-    scrollbar { @extend %dark_sidebar_scrollbar }
+    scrollbar {
+      @extend %dark_sidebar_scrollbar
+    }
   }
 }
 
@@ -116,14 +164,24 @@ filechooser,
   }
 
   > box button {
-    &:not(:active):not(:checked) { color: $dark_sidebar_fg; }
-    &:hover:not(:active) { @extend %dark_sidebar_button:hover; }
+    &:not(:active):not(:checked) {
+      color: $dark_sidebar_fg;
+    }
+    &:hover:not(:active) {
+      @extend %dark_sidebar_button:hover;
+    }
   }
 
-  .frame { border-color: darken(opacify($dark_sidebar_bg, 1), 5%); }
+  .frame {
+    border-color: darken(opacify($dark_sidebar_bg, 1), 5%);
+  }
 
-  scrollbar { @extend %dark_sidebar_scrollbar; }
-  junction { background-color: darken($dark_sidebar_bg, 5%); }
+  scrollbar {
+    @extend %dark_sidebar_scrollbar;
+  }
+  junction {
+    background-color: darken($dark_sidebar_bg, 5%);
+  }
 }
 
 filechooser {
@@ -133,25 +191,40 @@ filechooser {
     background-color: $dark_sidebar_bg;
     border-color: if($variant =='light', darken($dark_sidebar_bg, 7%), darken($dark_sidebar_bg, 15%));
 
-    button { @extend %dark_sidebar_button; }
-    entry { @extend %dark_sidebar_entry; }
+    button {
+      @extend %dark_sidebar_button;
+    }
+    entry {
+      @extend %dark_sidebar_entry;
+    }
 
     @extend %osd_check_radio;
 
-    label, combobox { color: $dark_sidebar_fg; }
+    label, combobox {
+      color: $dark_sidebar_fg;
+    }
   }
 }
 
 // Gedit
-.gedit-bottom-panel-paned { background-color: $base_color; }
+.gedit-bottom-panel-paned {
+  background-color: $base_color;
+}
 
-.gedit-side-panel-paned > separator { background-image: _solid($dark_sidebar_border); }
-.gedit-bottom-panel-paned > separator { background-image: _solid($borders_color); }
+.gedit-side-panel-paned > separator {
+  background-image: _solid($dark_sidebar_border);
+}
+
+.gedit-bottom-panel-paned > separator {
+  background-image: _solid($borders_color);
+}
 
 .gedit-document-panel {
   background-color: $dark_sidebar_bg;
 
-  .maximized & { background-color: opacify($dark_sidebar_bg, 1); }
+  .maximized & {
+    background-color: opacify($dark_sidebar_bg, 1);
+  }
 
   row {
     color: $dark_sidebar_fg;
@@ -164,7 +237,9 @@ filechooser {
       color: $selected_fg_color;
       background-color: $selected_bg_color;
 
-      button { color: $selected_fg_color; }
+      button {
+        color: $selected_fg_color;
+      }
     }
     &:selected, &:selected:hover {
       color: $selected_fg_color;
@@ -179,16 +254,26 @@ filechooser {
 %dark_sidebar_button {
   @include button(osd);
 
-  &:hover { @include button(osd-hover); }
-  &:active, &:checked { @include button(osd-active); }
-  &:disabled { @include button(osd-insensitive); }
+  &:hover {
+    @include button(osd-hover);
+  }
+  &:active, &:checked {
+    @include button(osd-active);
+  }
+  &:disabled {
+    @include button(osd-insensitive);
+  }
 }
 
 %dark_sidebar_entry {
   @include entry(osd);
 
-  &:focus { @include entry(osd-focus); }
-  &:disabled { @include entry(osd-insensitive); }
+  &:focus {
+    @include entry(osd-focus);
+  }
+  &:disabled {
+    @include entry(osd-insensitive);
+  }
 }
 
 %dark_sidebar_scrollbar {
@@ -202,9 +287,13 @@ filechooser {
   slider {
     background-color: transparentize(lighten($dark_sidebar_fg, 15%), 0.3);
 
-    &:hover { background-color: lighten($dark_sidebar_fg, 20%); }
+    &:hover {
+      background-color: lighten($dark_sidebar_fg, 20%);
+    }
 
-    &:hover:active { background-color: $selected_bg_color; }
+    &:hover:active {
+      background-color: $selected_bg_color;
+    }
 
     &:disabled {
       background-color: transparent;
