--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -3854,6 +3854,7 @@ headerbar,
       background-position: center;
       background-repeat: no-repeat;
       border-width: 0;
+      min-width: 20px;
 
       &:backdrop {
         opacity: 1;
