Increase headerbar transparency; Round corners

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -35,18 +35,18 @@ $drop_target_color: #ff6600;
 $insensitive_fg_color: if($variant == 'light', transparentize($fg_color, 0.45), transparentize($fg_color, 0.55));
 $insensitive_bg_color: if($variant == 'light', mix($bg_color, $base_color, 40%), lighten($bg_color, 2%));
 
-$header_bg: red;
-@if $transparency=='true' and $variant=='light' { $header_bg: transparentize(#e7e8eb, 0.05); }
-@if $transparency=='false' and $variant=='light' { $header_bg: #e7e8eb; }
-@if $transparency=='true' and ($variant=='dark' or $darker=='true') { $header_bg: transparentize(#2f343f, 0.03); }
+$header_bg: white;
+@if $transparency=='true' and $variant=='light' { $header_bg: transparentize(white, 0.2); }
+@if $transparency=='false' and $variant=='light' { $header_bg: white; }
+@if $transparency=='true' and ($variant=='dark' or $darker=='true') { $header_bg: transparentize(#2f343f, 0.2); }
 @if $transparency=='false' and ($variant=='dark' or $darker=='true') { $header_bg: #2f343f; }
 
 $header_bg_backdrop: if($darker == 'true' or $variant == 'dark', lighten($header_bg, 1.5%), lighten($header_bg, 3%));
 
 $header_border: if($variant == 'light' and $darker=='false', darken($header_bg, 7%), darken($header_bg, 4%));
 
-$header_fg: if($variant == 'light', saturate(transparentize($fg_color, 0.2), 10%), saturate(transparentize($fg_color, 0.2), 10%));
-$header_fg: if($darker == 'true', saturate(transparentize(#D3DAE3, 0.2), 10%), $header_fg);
+$header_fg: if($variant == 'light', black, white);
+$header_fg: if($darker == 'true', white, $header_fg);
 
 $dark_sidebar_bg: if($transparency == 'true', transparentize(#353945, 0.05), #353945);
 $dark_sidebar_fg: #BAC3CF;
@@ -77,8 +77,8 @@ $header_entry_border: if($darker == 'true' or $variant == 'dark', transparentize
 $button_bg: if($variant == 'light', lighten($bg_color, 2%), lighten($base_color, 2%));
 $button_border: $entry_border;
 
-$header_button_bg: if($darker == 'true' or $variant == 'dark', transparentize(lighten($header_bg, 22%), 0.6), transparentize($button_bg, 0.1));
-$header_button_border: if($darker == 'true' or $variant == 'dark', transparentize(darken($header_bg, 12%), 0.6), transparentize($header_fg, 0.7));
+$header_button_bg: if($darker == 'true' or $variant == 'dark', transparentize(lighten($header_bg, 22%), 0), white);
+$header_button_border: if($darker == 'true' or $variant == 'dark', transparentize(darken($header_bg, 12%), 0.6), $entry_border);
 
 //WM Buttons
 
