--- a/sass/_drawing.scss
+++ b/sass/_drawing.scss
@@ -173,6 +173,10 @@
     outline-offset: -3px;
     background-color: transparentize($header_bg, 1);
     border-color: transparentize($header_bg, 1);
+    border-radius: 100px;
+    padding: 3px 6px;
+    min-width: 18px;
+    min-width: 16px
   }
 
   @else if $t==header-hover {
@@ -180,7 +184,7 @@
   // hovered header-bar button
   //
     color: $header_fg;
-    border-color: $header_button_border;
+    border-color: $header_button_border;;
     background-color: $header_button_bg;
   }
 
