--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -56,7 +56,7 @@ $header_border: if($variant == 'light' and $darker=='false', darken($header_bg, 
 $header_fg: if($variant == 'light', #000, #FFF);
 $header_fg: if($darker == 'true', #FFF, $header_fg);
 
-$dark_sidebar_bg: red;
+$dark_sidebar_bg: #000;
 @if $variant=='light' or $darkest=='true' {
   $dark_sidebar_bg: lighten(transparentize(#000, if($transparency=='true', if($variant=='light', 0.07, 0.025), 0)), 10%);
 } @else {
