--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1769,6 +1769,10 @@ headerbar {
     margin-left: 3px;
     margin-right: 3px;
 
+    &:checked {
+      box-shadow:0 2px 2px rgba(0,0,0,.3);
+    }
+
     &.first-child {
       margin-left: 0;
     }
