--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -4,7 +4,7 @@
 
 $base_color: #FFF;
 @if $variant=='light' { $base_color: #FFF; }
-@if $variant=='dark' and $darkest=='false' { $base_color: #404552; }
+@if $variant=='dark' and $darkest=='false' { $base_color: #2f343f; }
 @if $variant=='dark' and $darkest=='true' { $base_color: #000; }
 $text_color: if($variant == 'light', #5c616c, #FFF);
 $bg_color: #fafafa;
@@ -41,14 +41,7 @@ $drop_target_color: #ff6600;
 $insensitive_fg_color: if($variant == 'light', transparentize($fg_color, 0.45), transparentize($fg_color, 0.55));
 $insensitive_bg_color: if($variant == 'light', mix($bg_color, $base_color, 40%), lighten($bg_color, 2%));
 
-$header_bg: #FFF;
-@if $transparency=='true' and $variant=='light' { $header_bg: transparentize(#FFF, 0.2); }
-@if $transparency=='false' and $variant=='light' { $header_bg: #FFF; }
-@if $transparency=='true' and $variant=='dark' and $darkest=='false' and $darker=='false' { $header_bg: transparentize(#2f343f, 0.2); }
-@if $transparency=='false' and $variant=='dark' and $darkest=='false' and $darker=='false' { $header_bg: #2f343f; }
-@if $transparency=='true' and ($darkest=='true' or $darker=='true') { $header_bg: transparentize(#000, 0.2); }
-@if $transparency=='false' and ($darkest=='true' or $darker=='true') { $header_bg: #000; }
-
+$header_bg: transparentize(if($darker=='false', $base_color, #000), if($transparency=='false', 0, .2));
 $header_bg_backdrop: if($darker == 'true' or $variant == 'dark', lighten($header_bg, 1.5%), lighten($header_bg, 3%));
 
 $header_border: if($variant == 'light' and $darker=='false', darken($header_bg, 7%), darken($header_bg, 4%));
@@ -86,11 +79,11 @@ $entry_bg: if($variant=='light', $base_color, lighten($base_color, 0%));
 $entry_border: if($variant == 'light', #cfd6e6, darken($borders_color, 0%));
 
 $header_entry_bg: if($darker == 'true' or $variant == 'dark', transparentize(lighten($header_bg, 22%), 0.6), transparentize($base_color, 0.1));
-$header_entry_border: if($darker == 'true' or $variant == 'dark', transparentize(darken($header_bg, 12%), 0.6), transparentize($header_fg, 0.7));
+$header_entry_border: if($variant=='light' and $darker=='false', darken($header_bg, 20%), lighten($header_bg, 30%));
 
 $button_bg: if($variant == 'light', lighten($bg_color, 2%), lighten($base_color, 2%));
 $button_border: $entry_border;
 
 $header_button_bg: if($darker == 'true' or $variant == 'dark', transparentize(lighten($header_bg, 22%), 0), #FFF);
-$header_button_border: if($darker == 'true' or $variant == 'dark', transparentize(darken($header_bg, 12%), 0.6), $entry_border);
+$header_button_border: if($variant == 'light' and $darker == 'false', $header_entry_border, transparent);
 
